add_subdirectory(complex)
add_subdirectory(rational)
add_subdirectory(dynarray)
add_subdirectory(matrixa)
add_subdirectory(dynarrayt)
add_subdirectory(ortoregt)
add_subdirectory(ortosegm)
add_subdirectory(matrixl)
add_subdirectory(stackl)
add_subdirectory(queuea)
add_subdirectory(stacka)
add_subdirectory(queuel)