add_subdirectory(test_complex)
add_subdirectory(test_rational)
add_subdirectory(test_dynarray)
add_subdirectory(test_matrixa)
add_subdirectory(test_matrixl)
add_subdirectory(test_dynarrayt)
add_subdirectory(test_ortoregt)
add_subdirectory(test_ortosegm)
add_subdirectory(test_stackl)
add_subdirectory(test_queuea)
add_subdirectory(catch2_complex)
add_subdirectory(catch2_rational)
add_subdirectory(catch2_dynarray)
add_subdirectory(catch2_matrixa)
add_subdirectory(catch2_matrixl)
add_subdirectory(catch2_stackl)